data/derived/comb/progs/unify/prog7324.ml.out
Characters 17-18:
  let _ = padZero [1;1;1;1] [2;2;2;2];;
                   ^
Error: This expression has type int but an expression was expected of type
         int list
